Fix: fix overflow bug.
fix overflow bug.

--- a/src/main/resources/static/css/devices/deviceService.css
+++ b/src/main/resources/static/css/devices/deviceService.css
@@ -25,14 +25,9 @@
 }
 
 #add_device_content {
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
 	display: none;
-	background-color: white;
-	padding: 10px;
+	/* padding: 10px; */
+	/* border: 1px dashed green; */
 }
 
 #add_device_content h4  {
